# Cpp-Crawler-MPI

./: .gitignore  CMakeLists.txt  README.md  Semaphore.cpp  analysis.py  crawler.cpp  crawlerMPI.cpp  crawler_sequencial.cpp  crawler_sequential.cpp  regex.txt
